--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-  font-family: var(--font-marcellus), var(--font-noto-serif-jp), sans-serif;
+  font-family: var(--font-playfair), var(--font-noto-serif-jp), sans-serif;
 }
